--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<title>Whoer VPN provider</title>
+<title>VPN provider</title>
 <meta name="description" content="Secure VPN service provider, anonymous, fastest and cheap VPN service. You will never longer fear that your data may end up somewhere."/>
 <link rel="stylesheet" href="/css/all.css?1475065198" type="text/css" async />
 <script type="text/javascript" src="/js/jquery-1.8.3.min.js"></script>
