--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<title>VPN provider</title>
+<title>Sam Gabert</title>
 	<style>
 		/* @import url(https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900); */
 body {
@@ -148,7 +148,7 @@ body { font-size: 1em;}
     <div id="about">
       <h1>
         <div style='float:left; margin-bottom:20px;'>
-          Zach Saucier
+          Sam Gabert
         </div>
         <div class="stage">
           <div class="pyramid3d">
