--- a/index.html
+++ b/index.html
@@ -160,21 +160,21 @@ body { font-size: 1em;}
         </div> 
       </h1>
       <h3 style='clear:both' class="subhead">
-        <a href="https://plus.google.com/108495471566196018473/posts">Zach</a> is an enthusiastic, young, self-taught web applications developer currently studying at the University of Georgia.
+        <a href="https://plus.google.com/108495471566196018473/posts">I am</a> an enthusiastic, young, self-taught web, mobile, desktop, and AI developer currently studying Computer Science at Sandy Secondary school.
       </h3>
       <p id='pleft'>
-        He does freelance work, writes for <a href="https://css-tricks.com/css-animation-tricks/">CSS</a> <a href="https://css-tricks.com/controlling-css-animations-transitions-javascript/">Tricks</a>, worked at <a href="http://deltadatasoft.com/">Delta Data Software</a> as a front-end developer, and is continuously working on personal projects to up his game.
+        I do freelance work, writes for <a href="https://css-tricks.com/css-animation-tricks/">Jenny Project</a> <a href="https://css-tricks.com/controlling-css-animations-transitions-javascript/">And hubot Engine</a>, i am continuously working on personal projects to up my game.
       </p>
       <p id='pright'>
-        Look for some of his work &amp; experiments on <a href="https://codepen.io/Zeaklous">CodePen</a>, <a href="http://stackoverflow.com/users/2065702/zeaklous">StackOverflow</a>, <a href="https://cssdeck.com/user/Zeaklous">CSS Deck</a>, or a bit of his recent work below.
+        Look for some of my work &amp; experiments on <a href="https://github.com/sam-gabert">github</a>, <a href="http://youtube.com/samandwillprogramming">YouTube</a>, <a href="https://github.com/willgraves1/jennyAI">Jenny Project</a>, or a bit of my recent work below.
       </p>
       <ul>
-        <li><a href="https://cssdeck.com/labs/css-only-full-page-slider">CSS Only Full Page Slider</a></li>
-        <li><a href="https://codepen.io/Zeaklous/pen/alpEm">CSS3 Circular Questionnaire (Plugin in development)</a></li>
-        <li><a href="https://zachsaucier.com/TumblrBook.html">TumblrBook</a></li>
+        <li><a href="#">Loading. . .</a></li>
+        <li><a href="#">Loading. . .</a></li>
+        <li><a href="#">Loading. . .</a></li>
       </ul>
       <p>
-        Feel free to contact him at zachsaucier[at]gmail.com if you'd like for him to work for you!
+        Feel free to contact me at samandwillprogramming[at]gmail.com if you'd like for me to work with/for you!
       </p>
     </div>
   </div>
